--- a/AppInfo.json
+++ b/AppInfo.json
@@ -1,6 +1,6 @@
 {
 	"Name-application"    : "JW-CAD for Mac",
-	"Version-applicaiotn" : "2016.06.01",
+	"Version-application" : "2016.06.01",
 	"Version-jw_cad"      : "7.11",
 	"Version-wine"        : "1.9.11",
 	"Version-Wineskin"    : "2.6.2",
