--- a/JW-CAD_Ver.7.11_for_Mac.app/Contents/Info.plist
+++ b/JW-CAD_Ver.7.11_for_Mac.app/Contents/Info.plist
@@ -22,7 +22,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Wineskin.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>JW-CAD 7.11 Ver.20160622.Wineskin.prefs</string>
+	<string>JW-CAD_Ver.7.11_for_Mac23045948Wine.wineskin.prefs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>CFBundleName</key>
