--- a/JW-CAD_Ver.7.11_for_Mac.app/Contents/Info.plist
+++ b/JW-CAD_Ver.7.11_for_Mac.app/Contents/Info.plist
@@ -22,18 +22,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Wineskin.icns</string>
 	<key>CFBundleIdentifier</key>
-<<<<<<< HEAD
-	<string>JW-CAD_Ver.7.11_for_Mac.Wineskin.prefs</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>1.0</string>
-	<key>CFBundleName</key>
-	<string>JW-CAD_Ver.7.11_for_Mac</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>2016.06.01</string>
-=======
-	<string>JW-CAD 7.11 Ver.20160622.Wineskin.prefs</string>
+	<string>JW-CAD_Ver.7.11_for_Mac23045948Wine.wineskin.prefs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>CFBundleName</key>
@@ -42,7 +31,6 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>My Program Version</string>
->>>>>>> gh-pages
 	<key>CFBundleVersion</key>
 	<string>Wineskin 2.6.2</string>
 	<key>CLI Custom Commands</key>
