--- a/JW-CAD_for_Mac-V.7.11.app/Contents/Info.plist
+++ b/JW-CAD_for_Mac-V.7.11.app/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>Associations</key>
-	<string>jww</string>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleDocumentTypes</key>
@@ -22,15 +22,15 @@
 	<key>CFBundleIconFile</key>
 	<string>Wineskin.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>JW-CAD_for_Mac-V.7.11.Wineskin.prefs</string>
+	<string>JW-CAD_7.11_for_Mac.Wineskin.prefs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>CFBundleName</key>
-	<string>JW-CAD_for_Mac-V.7.11</string>
+	<string>JW-CAD_7.11_for_Mac</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>20161029</string>
+	<string>20161123</string>
 	<key>CFBundleVersion</key>
 	<string>Wineskin 2.6.2</string>
 	<key>CLI Custom Commands</key>
