--- a/JW-CAD.7.11_for_Mac.app/Contents/Info.plist
+++ b/JW-CAD.7.11_for_Mac.app/Contents/Info.plist
@@ -30,7 +30,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>My Program Version</string>
+	<string>20161201</string>
 	<key>CFBundleVersion</key>
 	<string>Wineskin 2.6.2</string>
 	<key>CLI Custom Commands</key>
