起動のウィンドウサイズ調整

--- a/JW-CAD.7.11_for_Mac.app/Contents/Info.plist
+++ b/JW-CAD.7.11_for_Mac.app/Contents/Info.plist
@@ -22,7 +22,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Wineskin.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>JW-CAD.7.11_for_Mac.Wineskin.prefs</string>
+	<string>JW-CAD.7.11_for_Mac843657932Wine.wineskin.prefs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>1.0</string>
 	<key>CFBundleName</key>
